Configs/kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnd-mysql
  template:
    metadata:
      labels:
        app: dnd-mysql
    spec:
      containers:
      - name: dnd-mysql
        image: mysql:latest
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        hostPath:
          path: /var/dnd/mysql/data
          type: DirectoryOrCreate
