Configs/kubernetes/bo-combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dnd-express
  template:
    metadata:
      labels:
        app: dnd-express
    spec:
      containers:
      - name: dnd-express
        imagePullPolicy: IfNotPresent
        image: dnd-express:latest
        ports:
        - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: dnd-express-service
spec:
  selector:
    app: dnd-express
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
