Configs/kubernetes/bo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnd-express-service
spec:
  selector:
    app: dnd-express
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
