Configs/kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnd-mysql-service
spec:
  selector:
    app: dnd-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
