Configs/kubernetes/phpmyadmin-combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-phpmyadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnd-phpmyadmin
  template:
    metadata:
      labels:
        app: dnd-phpmyadmin
    spec:
      containers:
      - name: dnd-phpmyadmin
        image: phpmyadmin/phpmyadmin:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dnd-phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: dnd-phpmyadmin
  ports:
    - port: 80
      targetPort: 80
