Configs/kubernetes/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnd-phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: dnd-phpmyadmin
  ports:
    - port: 80
      targetPort: 80
