Configs/kubernetes/fo-combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-fo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dnd-fo
  template:
    metadata:
      labels:
        app: dnd-fo
    spec:
      containers:
      - name: dnd-fo
        imagePullPolicy: IfNotPresent
        image: dnd-fo:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: ssl-cert
          mountPath: /etc/ssl/certs/nginx-selfsigned.crt
          subPath: nginx-selfsigned.crt
          readOnly: true
        - name: ssl-key
          mountPath: /etc/ssl/private/nginx-selfsigned.key
          subPath: nginx-selfsigned.key
          readOnly: true
        - name: dhparam
          mountPath: /etc/ssl/certs/dhparam.pem
          subPath: dhparam.pem
          readOnly: true
      volumes:
      - name: ssl-cert
        secret:
          secretName: my-tls-secret
          items:
          - key: nginx-selfsigned.crt
            path: nginx-selfsigned.crt
      - name: ssl-key
        secret:
          secretName: my-tls-secret
          items:
          - key: nginx-selfsigned.key
            path: nginx-selfsigned.key
      - name: dhparam
        secret:
          secretName: my-tls-secret
          items:
          - key: dhparam.pem
            path: dhparam.pem

---

apiVersion: v1
kind: Service
metadata:
  name: dnd-fo-service
spec:
  selector:
    app: dnd-fo
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer

  ---

  apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-fo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - 192.168.1.65
    secretName: my-tls-secret
  rules:
  - host: 192.168.1.65
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dnd-fo-service
            port:
              number: 443
