Configs/kubernetes/fo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-fo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - 192.168.1.65
    secretName: my-tls-secret
  rules:
  - host: 192.168.1.65
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dnd-fo-service
            port:
              number: 443
