Configs/kubernetes/mysql-combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnd-mysql
  template:
    metadata:
      labels:
        app: dnd-mysql
    spec:
      containers:
      - name: dnd-mysql
        image: mysql:latest
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: dnd-mysql-service
spec:
  selector:
    app: dnd-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-mysql-access
spec:
  podSelector:
    matchLabels:
      app: dnd-mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dnd-express
      ports:
        - protocol: TCP
          port: 3306
