Configs/kubernetes/mysql-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-mysql-access
spec:
  podSelector:
    matchLabels:
      app: dnd-mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dnd-express
      ports:
        - protocol: TCP
          port: 3306
